--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    background: url("gen-h-z7365391513679_4d0dc174b547aadc9a342fcefab48a22.jpg") no-repeat center center fixed;
+    background: url("https://i.pinimg.com/originals/89/69/dc/8969dc3e963f6cc6d69b5a0db10ceaa2.jpg") no-repeat center center fixed;
     background-size: cover;
     color: #4a2c2a;
     display: flex;
@@ -155,7 +155,7 @@
   <h1 id="title"></h1>
 
   <div class="card">
-    <img src="gen-h-z7193515611095_9c8c651440b4bb8c9eaed6e887862c41.jpg" alt="Bunny avatar" class="avatar">
+    <img src="gen-h-z7365391513679_4d0dc174b547aadc9a342fcefab48a22.jpg" alt="Bunny avatar" class="avatar">
     <h2 id="name"></h2>
     <div id="content"></div>
     <button class="btn" onclick="showSecret()" id="btnText"></button>
