--- a/index.html
+++ b/index.html
@@ -165,63 +165,63 @@
 <script>
   const data = {
     vi: {
-  popup: "💌 Hey, cảm ơn cậu nhaaa 😚<br>Bé Uni vui lắm vì được cậu ghé qua 💕<br>Hãy cùng Bé Uni khám phá thêm nhiều điều dễ thương trong cuộc sống nào! 🌈",
+  popup: "💌 Hey, cảm ơn cậu nhaaa 😚<br>Uni vui lắm vì được cậu ghé qua 💕<br>Hãy cùng Uni khám phá thêm nhiều điều dễ thương trong cuộc sống nào! 🌈",
   title: "🧸 Bé Uni – Cô bé yêu màu hồng 💗",
   name: "🌸 (Bé Uni) 🌸",
   content: `
-    <p>Xin chào 💕! Mình là <b>Bé Uni 🧸</b> – một cô bé nhỏ nhắn với trái tim ngọt ngào và luôn tràn đầy năng lượng tích cực 🌸.</p>
+    <p>Xin chào 💕! Mình là <b> Uni 🧸</b> – một cô bé nhỏ nhắn với trái tim ngọt ngào và luôn tràn đầy năng lượng tích cực 🌸.</p>
     <p>Mình cực kỳ yêu màu hồng 💗 – màu của sự dịu dàng, đáng yêu và ấm áp, giống như cảm xúc mình muốn lan tỏa đến mọi người.</p>
     <p>👜 Mình thích <b>mua sắm</b> và <b>du lịch</b> ✈️ – mỗi chuyến đi đều mang lại niềm vui và những kỷ niệm xinh xắn 💖.</p>
     <p>🌸 <b>Tính cách:</b> Dịu dàng, đáng yêu, hơi “bánh bèo” một chút nhưng luôn chân thành 💞.</p>
     <p>💌 <b>Châm ngôn sống:</b> “Cứ là chính mình – nhỏ bé, dễ thương và luôn tỏa sáng theo cách của Bé Uni 🧸.”</p>
   `,
-  btn: "Muốn biết bí mật của Bé Uni không nè? 🧸",
-  secret: "💞 Bí mật này Bé Uni giữ kỹ lắm đó 💖 Chưa được bật mí đâu nha 😚💞"
+  btn: "Muốn biết bí mật của Uni không nè? 🧸",
+  secret: "💞 Bí mật này Uni giữ kỹ lắm đó 💖 Chưa được bật mí đâu nha 😚💞"
 },
 
 en: {
-  popup: "💌 Hey there! 😍<br>Bé Uni is so happy you stopped by 💕<br>Let’s explore a world of cuteness together! 🌸",
+  popup: "💌 Hey there! 😍<br>Uni is so happy you stopped by 💕<br>Let’s explore a world of cuteness together! 🌸",
   title: "🧸 Bé Uni – The girl who loves pink 💗",
   name: "🌸 (Bé Uni) 🌸",
   content: `
-    <p>Hello 💕! I'm <b>Bé Uni 🧸</b> – a sweet and cheerful little girl full of positivity 🌸.</p>
+    <p>Hello 💕! I'm <b>Uni 🧸</b> – a sweet and cheerful little girl full of positivity 🌸.</p>
     <p>I truly adore the color pink 💗 – it represents softness, love, and warmth, just like the feelings I want to share.</p>
     <p>👜 I love <b>shopping</b> and <b>traveling</b> ✈️ – every trip brings joy and lovely memories 💖.</p>
     <p>🌸 <b>Personality:</b> Gentle, cute, a little dreamy, but always sincere 💞.</p>
     <p>💌 <b>Life quote:</b> “Be yourself — stay cute, stay kind, stay Bé Uni 🧸.”</p>
   `,
-  btn: "Wanna know Bé Uni’s little secret? 🧸",
-  secret: "💞 This secret is very special 💖 Bé Uni can’t tell you yet 😚💞"
+  btn: "Wanna know Uni’s little secret? 🧸",
+  secret: "💞 This secret is very special 💖 Uni can’t tell you yet 😚💞"
 },
 
 ru: {
-  popup: "💌 Привет 😚<br>Бе Уни очень рада тебя видеть 💕<br>Давай вместе создавать милые моменты! 🌈",
-  title: "🧸 Бе Уни – Девочка, любящая розовый 💗",
-  name: "🌸 (Бе Уни) 🌸",
+  popup: "💌 Привет 😚<br>Uni очень рада тебя видеть 💕<br>Давай вместе создавать милые моменты! 🌈",
+  title: "🧸 Uni – Девочка, любящая розовый 💗",
+  name: "🌸 (Uni) 🌸",
   content: `
-    <p>Привет 💕! Я <b>Бе Уни 🧸</b> – милая и добрая девочка 🌸.</p>
+    <p>Привет 💕! Я <b>Uni 🧸</b> – милая и добрая девочка 🌸.</p>
     <p>Я обожаю розовый цвет 💗 – он символизирует нежность, тепло и любовь.</p>
     <p>👜 Я люблю <b>шопинг</b> и <b>путешествия</b> ✈️ – каждое из них приносит радость 💖.</p>
     <p>🌸 <b>Характер:</b> Нежная, милая, немного мечтательная, но искренняя 💞.</p>
-    <p>💌 <b>Девиз:</b> “Будь собой — будь милой, будь доброй, будь Бе Уни 🧸.”</p>
+    <p>💌 <b>Девиз:</b> “Будь собой — будь милой, будь доброй, будь Uni 🧸.”</p>
   `,
-  btn: "Хочешь узнать секрет Бе Уни? 🧸",
-  secret: "💞 Это особенный секрет 💖 Бе Уни пока не расскажет 😚💞"
+  btn: "Хочешь узнать секрет Uni? 🧸",
+  secret: "💞 Это особенный секрет 💖 Uni пока не расскажет 😚💞"
 },
 
 cn: {
-  popup: "💌 你好呀！😚<br>Bé Uni 很开心你来了 💕<br>一起发现更多可爱的瞬间吧！🌈",
-  title: "🧸 Bé Uni – 喜爱粉色的小女孩 💗",
-  name: "🌸 (Bé Uni) 🌸",
+  popup: "💌 你好呀！😚<br>Uni 很开心你来了 💕<br>一起发现更多可爱的瞬间吧！🌈",
+  title: "🧸 Uni – 喜爱粉色的小女孩 💗",
+  name: "🌸 (Uni) 🌸",
   content: `
-    <p>你好 💕！我是 <b>Bé Uni 🧸</b> —— 一个甜美又可爱的女孩 🌸。</p>
+    <p>你好 💕！我是 <b>Uni 🧸</b> —— 一个甜美又可爱的女孩 🌸。</p>
     <p>我非常喜欢粉色 💗，它代表温柔、可爱和温暖。</p>
     <p>👜 我喜欢 <b>购物</b> 和 <b>旅行</b> ✈️，每一次出发都充满快乐 💖。</p>
     <p>🌸 <b>性格：</b> 温柔、可爱、有点梦幻，但很真诚 💞。</p>
-    <p>💌 <b>座右铭：</b> “做自己——保持可爱，保持善良，做 Bé Uni 🧸。”</p>
+    <p>💌 <b>座右铭：</b> “做自己——保持可爱，保持善良，做 Uni 🧸。”</p>
   `,
-  btn: "想知道 Bé Uni 的小秘密吗？🧸",
-  secret: "💞 这是 Bé Uni 的秘密哦 💖 现在还不能告诉你 😚💞"
+  btn: "想知道 Uni 的小秘密吗？🧸",
+  secret: "💞 这是 Uni 的秘密哦 💖 现在还不能告诉你 😚💞"
 }
   };
 
