--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   const data = {
     vi: {
   popup: "💌 Hey, cảm ơn cậu nhaaa 😚<br>Uni vui lắm vì được cậu ghé qua 💕<br>Hãy cùng Uni khám phá thêm nhiều điều dễ thương trong cuộc sống nào! 🌈",
-  title: "🧸 Bé Uni – Cô bé yêu màu hồng 💗",
+  title: "🧸 Bé Uni – Cô bé đáng yêu 💗",
   name: "🌸 (Bé Uni) 🌸",
   content: `
     <p>Xin chào 💕! Mình là <b> Uni 🧸</b> – một cô bé nhỏ nhắn với trái tim ngọt ngào và luôn tràn đầy năng lượng tích cực 🌸.</p>
